@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2024, 2026, Oracle and/or its affiliates. All rights reserved.
+ * Copyright 2026 Arm Limited and/or its affiliates.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,6 +26,7 @@
  * @test id=no-vectorization
  * @bug 8340093 8342095
  * @summary Test vectorization of reduction loops.
+ * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P0
  */
@@ -33,6 +35,7 @@
  * @test id=vanilla
  * @bug 8340093 8342095
  * @summary Test vectorization of reduction loops.
+ * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P1
  */
@@ -41,6 +44,7 @@
  * @test id=force-vectorization
  * @bug 8340093 8342095
  * @summary Test vectorization of reduction loops.
+ * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P2
  */
@@ -50,10 +54,14 @@ package compiler.loopopts.superword;
 import java.util.Map;
 import java.util.HashMap;
 
+import jdk.incubator.vector.Float16;
+
 import compiler.lib.ir_framework.*;
 import compiler.lib.verify.*;
 import static compiler.lib.generators.Generators.G;
 import compiler.lib.generators.Generator;
+import static java.lang.Float.floatToFloat16;
+import static jdk.incubator.vector.Float16.*;
 
 /**
  * Note: there is a corresponding JMH benchmark:
@@ -65,6 +73,7 @@ public class TestReductions {
     private static final Generator<Long>    GEN_L = G.longs();
     private static final Generator<Float>   GEN_F = G.floats();
     private static final Generator<Double>  GEN_D = G.doubles();
+    private static final Generator<Short>   GEN_F16 = G.float16s();
 
     private static byte[] in1B   = fillRandom(new byte[SIZE]);
     private static byte[] in2B   = fillRandom(new byte[SIZE]);
@@ -89,6 +98,9 @@ public class TestReductions {
     private static double[] in1D = fillRandom(new double[SIZE]);
     private static double[] in2D = fillRandom(new double[SIZE]);
     private static double[] in3D = fillRandom(new double[SIZE]);
+    private static short[] in1F16 = fillRandomFloat16(new short[SIZE]);
+    private static short[] in2F16 = fillRandomFloat16(new short[SIZE]);
+    private static short[] in3F16 = fillRandomFloat16(new short[SIZE]);
 
     interface TestFunction {
         Object run();
@@ -102,6 +114,7 @@ public class TestReductions {
 
     public static void main(String[] args) {
         TestFramework framework = new TestFramework(TestReductions.class);
+        framework.addFlags("--add-modules=jdk.incubator.vector");
         switch (args[0]) {
             case "P0" -> { framework.addFlags("-XX:+UnlockDiagnosticVMOptions", "-XX:AutoVectorizationOverrideProfitability=0"); }
             case "P1" -> { framework.addFlags("-XX:+UnlockDiagnosticVMOptions", "-XX:AutoVectorizationOverrideProfitability=1"); }
@@ -250,6 +263,13 @@ public class TestReductions {
         tests.put("doubleMinBig",        TestReductions::doubleMinBig);
         tests.put("doubleMaxBig",        TestReductions::doubleMaxBig);
 
+        tests.put("float16AddSimple",    TestReductions::float16AddSimple);
+        tests.put("float16MulSimple",    TestReductions::float16MulSimple);
+        tests.put("float16AddDotProduct", TestReductions::float16AddDotProduct);
+        tests.put("float16MulDotProduct", TestReductions::float16MulDotProduct);
+        tests.put("float16AddBig",       TestReductions::float16AddBig);
+        tests.put("float16MulBig",       TestReductions::float16MulBig);
+
         // Compute gold value for all test methods before compilation
         for (Map.Entry<String,TestFunction> entry : tests.entrySet()) {
             String name = entry.getKey();
@@ -394,7 +414,14 @@ public class TestReductions {
                  "doubleAddBig",
                  "doubleMulBig",
                  "doubleMinBig",
-                 "doubleMaxBig"})
+                 "doubleMaxBig",
+
+                 "float16AddSimple",
+                 "float16MulSimple",
+                 "float16AddDotProduct",
+                 "float16MulDotProduct",
+                 "float16AddBig",
+                 "float16MulBig"})
     public void runTests() {
         for (Map.Entry<String,TestFunction> entry : tests.entrySet()) {
             String name = entry.getKey();
@@ -450,6 +477,13 @@ public class TestReductions {
 
     static double[] fillRandom(double[] a) {
         G.fill(GEN_D, a);
+        return a;
+    }
+
+    static short[] fillRandomFloat16(short[] a) {
+        for (int i = 0; i < a.length; i++) {
+            a[i] = GEN_F16.next();
+        }
         return a;
     }
 
@@ -1340,7 +1374,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1357,7 +1391,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1374,7 +1408,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1391,7 +1425,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1408,7 +1442,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1425,7 +1459,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1442,7 +1476,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1460,7 +1494,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1477,7 +1511,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1494,7 +1528,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1511,7 +1545,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1528,7 +1562,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1545,7 +1579,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1562,7 +1596,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1580,7 +1614,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1597,7 +1631,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1614,7 +1648,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1631,7 +1665,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1648,7 +1682,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1665,7 +1699,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1682,7 +1716,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1700,7 +1734,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1717,7 +1751,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1734,7 +1768,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1751,7 +1785,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.ADD_REDUCTION_VL, "> 0",
                   IRNode.ADD_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1799,7 +1833,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
@@ -1819,7 +1853,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
@@ -2207,7 +2241,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2224,7 +2258,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2284,7 +2318,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2301,7 +2335,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2361,7 +2395,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2378,7 +2412,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2444,7 +2478,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2461,7 +2495,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2521,7 +2555,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2538,7 +2572,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2598,7 +2632,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2615,7 +2649,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2628,5 +2662,110 @@ public class TestReductions {
         return acc;
     }
 
+    // ---------float16***Simple ------------------------------------------------------------
+    @Test
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeature = {"sve", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16AddSimple() {
+        short acc = (short)0; // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), shortBitsToFloat16(in1F16[i])));
+        }
+        return shortBitsToFloat16(acc);
+    }
+
+    @Test
+    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
+    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16MulSimple() {
+        short acc = floatToFloat16(1.0f); // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), shortBitsToFloat16(in1F16[i])));
+        }
+        return shortBitsToFloat16(acc);
+    }
+
+    // ---------float16***DotProduct ------------------------------------------------------------
+    @Test
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeature = {"sve", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16AddDotProduct() {
+        short acc = (short)0; // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            Float16 val = multiply(shortBitsToFloat16(in1F16[i]), shortBitsToFloat16(in2F16[i]));
+            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), val));
+        }
+        return shortBitsToFloat16(acc);
+    }
+
+    @Test
+    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
+    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16MulDotProduct() {
+        short acc = floatToFloat16(1.0f); // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            Float16 val = multiply(shortBitsToFloat16(in1F16[i]), shortBitsToFloat16(in2F16[i]));
+            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), val));
+        }
+        return shortBitsToFloat16(acc);
+    }
+
+    // ---------float16***Big ------------------------------------------------------------
+    @Test
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeature = {"sve", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
+    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16AddBig() {
+        short acc = (short)0; // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            Float16 a = shortBitsToFloat16(in1F16[i]);
+            Float16 b = shortBitsToFloat16(in2F16[i]);
+            Float16 c = shortBitsToFloat16(in3F16[i]);
+            Float16 val = add(multiply(a, b), add(multiply(a, c), multiply(b, c)));
+            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), val));
+        }
+        return shortBitsToFloat16(acc);
+    }
+
+    @Test
+    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
+        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
+    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
+        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    private static Float16 float16MulBig() {
+        short acc = floatToFloat16(1.0f); // neutral element
+        for (int i = 0; i < SIZE; i++) {
+            Float16 a = shortBitsToFloat16(in1F16[i]);
+            Float16 b = shortBitsToFloat16(in2F16[i]);
+            Float16 c = shortBitsToFloat16(in3F16[i]);
+            Float16 val = add(multiply(a, b), add(multiply(a, c), multiply(b, c)));
+            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), val));
+        }
+        return shortBitsToFloat16(acc);
+    }
 
 }
